--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -20,7 +20,8 @@ resources:
     source:
       uri: https://github.com/jensendw/concoursetest.git
       branch: [release/*,develop,master]
-      ignore_paths: ci/*
+      ignore_paths:
+        - ci/*
 
   - name: angrypigs-docker-image
     type: docker-image
