--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -21,7 +21,8 @@ resources:
       uri: https://github.com/jensendw/concoursetest.git
       branch: [release/*,develop,master]
       ignore_paths:
-        - ci/*
+        - ci/gen_git_metadata.yml
+        - ci/pipeline.yml
 
   - name: angrypigs-docker-image
     type: docker-image
