--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -19,7 +19,10 @@ resources:
     type: git-branch-heads
     source:
       uri: https://github.com/jensendw/concoursetest.git
-      branch: [release/*,develop,master]
+      branch:
+        - release/*
+        - master
+        - develop
       ignore_paths:
         - ci/gen_git_metadata.yml
         - ci/pipeline.yml
