--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -19,7 +19,7 @@ resources:
     source:
       uri: https://github.com/jensendw/concoursetest.git
       branch: master
-      ignore_paths: [ci/mooh]
+      ignore_paths: [ci/]
 
   - name: angrypigs-docker-image
     type: docker-image
