--- a/ci/gen_git_metadata.yml
+++ b/ci/gen_git_metadata.yml
@@ -8,7 +8,7 @@ image_resource:
     tag: latest
 
 inputs:
-  - name: concoursetest-github
+  - name: github-concoursetest
 
 outputs:
   - name: git-metadata
