--- a/ci/gen_git_metadata.yml
+++ b/ci/gen_git_metadata.yml
@@ -8,7 +8,7 @@ image_resource:
     tag: latest
 
 inputs:
-  - name: concoursetest-github
+  - name: github-concoursetest
 
 outputs:
   - name: git-metadata
@@ -18,5 +18,5 @@ run:
   args:
   - -exc
   - |
-    cd concoursetest-github
+    cd github-concoursetest
     git branch | grep -v HEAD | awk {'print $1'} | sed 's/release\//release-/g' > ../git-metadata/branch
