--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -20,11 +20,14 @@ resources:
     source:
       uri: https://github.com/arwineap/concoursetest.git
       branch: [release/*,develop,master]
+      git_config:
+        ignore_paths:
+        - ci/*
       ignore_paths:
-       - ci/gen_git_metadata.yml
-       - ci/pipeline.yml
-       - ci/
-       - ci/*
+      - ci/gen_git_metadata.yml
+      - ci/pipeline.yml
+      - ci/
+      - ci/*
 
   - name: angrypigs-docker-image
     type: docker-image
